--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
-spring.datasource.url=jdbc:h2:mem:memDb;DB_CLOSE_DELAY=-1
-spring.datasource.drivenClassName=org.h2.Driver
+
+# Datasource
+spring.datasource.url=jdbc:h2:mem:producer
 spring.datasource.username=sa
 spring.datasource.password=
-
-
+spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.hibernate.ddl-auto=update
 
 
 
